--- a/bitnami/influxdb/templates/influxdb/statefulset-high-availability.yaml
+++ b/bitnami/influxdb/templates/influxdb/statefulset-high-availability.yaml
@@ -26,6 +26,9 @@ spec:
         app.kubernetes.io/component: influxdb
     spec:
       {{- include "influxdb.imagePullSecrets" . | nindent 6 }}
+      {{- if .Values.influxdb.hostAliases }}
+      hostAliases: {{- include "common.tplvalues.render" (dict "value" .Values.influxdb.hostAliases "context" $) | nindent 8 }}
+      {{- end }}
       {{- if .Values.influxdb.affinity }}
       affinity: {{- include "common.tplvalues.render" (dict "value" .Values.influxdb.affinity "context" $) | nindent 8 }}
       {{- else }}
