Use SOLR_CORES instead of SOLR_CORE
This variable has been changed to use a list of cores and the variable has been renamed to SOLR_CORES.

GH Container issue: https://github.com/bitnami/bitnami-docker-solr/pull/37

--- a/bitnami/solr/templates/statefulset.yaml
+++ b/bitnami/solr/templates/statefulset.yaml
@@ -186,7 +186,7 @@ spec:
             - name: SOLR_COLLECTION
               value: {{ .Values.collection | quote }}
             {{- else }}
-            - name: SOLR_CORE
+            - name: SOLR_CORES
               value: {{ .Values.coreName | quote }}
             {{- end }}
             - name: SOLR_COLLECTION_SHARDS
